testes on main.cpp

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,5 @@
 [Defaults]
-binary:/Users/hbrunie/Codes/precisiontuning/bin/cg.A
+binary:/Users/hbrunie/Codes/precisiontuning/nounwind
+min:0
+max:0
+verif_text:SUCCESS
