Adding systematic tests

--- a/tests/systematic/Makefile
+++ b/tests/systematic/Makefile
@@ -1,4 +1,4 @@
-all: test1Call
+all: test1Call test2Calls
 
 include ../../make.def
 
@@ -6,10 +6,11 @@ test1Call:
 	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
 	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR)
 
-test2Call:
-	$(CXX) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
-	$(CXX) -o $@ $@.o -g $(PTLIB) $(DEBUG)
-	mv $@ $@_v2
+test2Calls:
+	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
+	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
+	$(CXX) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
+	$(CXX) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR)
 
 test2StaticCalls:
 	$(CXX) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
@@ -27,5 +28,4 @@ clean:
 	rm -f *.o
 
 cleanall: clean
-	rm -f test1Call_v1 test1Call_v2 test1Call_v1.dSYM test1Call_v1.dSYM
-
+	rm -rf test1Call_* test2Calls_*
