[COMPILE] adding optimisation flag O3

--- a/internal/src/Makefile
+++ b/internal/src/Makefile
@@ -4,8 +4,8 @@ include ../../make.def
 
 libprecisiontuning.so: ../utils/Debug.o
 	make -C ../utils/
-	$(CXX) -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR)
-	$(CXX) -o $@ ../utils/Debug.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o -g $(LIB) $(DEBUG) $(DYNLIB)
+	$(CXX) -O3 -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR)
+	$(CXX) -O3 -o $@ ../utils/Debug.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o -g $(LIB) $(DEBUG) $(DYNLIB)
 	mv $@ $(PUBLICLIB)
 
 ../utils/Debug.o:
