[MAKEFILES] Update Makefiles.
Flags, make.Cori and make.MACOS (to cp in make.def)
OPTIM and DYNLIB

--- a/internal/utils/Makefile
+++ b/internal/utils/Makefile
@@ -2,8 +2,8 @@ all: testDebug
 include ../../make.def
 
 testDebug:
-	$(CXX) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR)
-	$(CXX) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR)
+	$(CXX) $(OPTIM) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
+	$(CXX) $(OPTIM) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
 
 clean:
 	rm -f *.o testDebug
