--- a/internal/utils/Makefile
+++ b/internal/utils/Makefile
@@ -2,7 +2,7 @@ all: testDebug
 include ../../make.def
 
 testDebug:
-	$(CXX) $(OPTIM) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
+	$(CXX) $(OPTIM) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR)
 	$(CXX) $(OPTIM) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
 
 clean:
