[CORI][GCC] Needs -fPIC at compile time (different from clang++).

--- a/internal/src/Makefile
+++ b/internal/src/Makefile
@@ -4,7 +4,7 @@ include ../../make.def
 
 libprecisiontuning.so: ../utils/Debug.o
 	make -C ../utils/
-	$(CXX) $(OPTIM) -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR)
+	$(CXX) $(OPTIM) -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
 	$(CXX) $(OPTIM) -o $@ ../utils/Debug.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o -g $(LIB) $(DEBUG) $(DYNLIB)
 	mv $@ $(PUBLICLIB)
 
