[COMPILE] transforming Makefile. Easier to update by end-user.

--- a/tests/systematic/Makefile
+++ b/tests/systematic/Makefile
@@ -3,48 +3,48 @@ all: testManyCallsExp testManyCalls test1CallSiteMultipleDynCalls test1Call test
 include ../../make.def
 
 testManyCallsExp:
-	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
-	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
-	$(CXX) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
-	$(CXX) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4
-	$(CXX) -o $@_v5 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV5
+	$(CXX) $(CXXFLAGS) -o $@_$(DEBUG)_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
+	$(CXX) $(CXXFLAGS) -o $@_$(DEBUG)_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
+	$(CXX) $(CXXFLAGS) -o $@_$(DEBUG)_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
+	$(CXX) $(CXXFLAGS) -o $@_$(DEBUG)_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4
+	$(CXX) $(CXXFLAGS) -o $@_$(DEBUG)_v5 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV5
 
 testManyCalls:
-	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
-	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
-	$(CXX) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
-	$(CXX) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4
-	$(CXX) -o $@_v5 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV5
+	$(CXX) $(CXXFLAGS) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
+	$(CXX) $(CXXFLAGS) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
+	$(CXX) $(CXXFLAGS) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
+	$(CXX) $(CXXFLAGS) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4
+	$(CXX) $(CXXFLAGS) -o $@_v5 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV5
 
 test1Call:
-	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
-	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR)
+	$(CXX) $(CXXFLAGS) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
+	$(CXX) $(CXXFLAGS) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR)
 
 test2Calls:
-	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
-	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
-	$(CXX) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
-	$(CXX) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4
+	$(CXX) $(CXXFLAGS) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
+	$(CXX) $(CXXFLAGS) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
+	$(CXX) $(CXXFLAGS) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
+	$(CXX) $(CXXFLAGS) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4
 
 test1CallSiteMultipleDynCalls:
-	$(CXX) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
-	$(CXX) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
-	$(CXX) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
-	$(CXX) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4 
-	$(CXX) -o $@_v5 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV5
+	$(CXX) $(CXXFLAGS) -o $@_v1 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV1
+	$(CXX) $(CXXFLAGS) -o $@_v2 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV2
+	$(CXX) $(CXXFLAGS) -o $@_v3 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV3
+	$(CXX) $(CXXFLAGS) -o $@_v4 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV4 
+	$(CXX) $(CXXFLAGS) -o $@_v5 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR) -DV5
 	$(CXX) -o $@_v6 $@.cpp -g $(PTLIB) $(DEBUG) $(PTINCDIR)
 
 test2StaticCalls:
-	$(CXX) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
-	$(CXX) -o $@ $@.o -g $(PTLIB) $(DEBUG)
+	$(CXX) $(CXXFLAGS) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
+	$(CXX) $(CXXFLAGS) -o $@ $@.o -g $(PTLIB) $(DEBUG)
 
 test2DynamicCalls:
-	$(CXX) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
-	$(CXX) -o $@ $@.o -g $(PTLIB) $(DEBUG)
+	$(CXX) $(CXXFLAGS) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
+	$(CXX) $(CXXFLAGS) -o $@ $@.o -g $(PTLIB) $(DEBUG)
 
 test4Calls2Static2Dynamic:
-	$(CXX) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
-	$(CXX) -o $@ $@.o -g $(PTLIB) $(DEBUG)
+	$(CXX) $(CXXFLAGS) -c $@.cpp -g $(DEBUG) $(PTINCDIR)
+	$(CXX) $(CXXFLAGS) -o $@ $@.o -g $(PTLIB) $(DEBUG)
 
 clean:
 	rm -f *.o
