--- a/internal/src/Makefile
+++ b/internal/src/Makefile
@@ -4,9 +4,9 @@ include ../../make.def
 
 libprecisiontuning.so: ../utils/Debug.o
 	make -C ../utils/
-	$(CXX) $(OPTIM) -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
-	$(CXX) $(OPTIM) -o $@ ../utils/Debug.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o -g $(LIB) $(DEBUG) $(DYNLIB)
-	mv $@ $(PUBLICLIB)
+	$(CXX) $(CXXPTFLAGS) -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
+	$(CXX) $(CXXPTFLAGS) -o $@ ../utils/Debug.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o -g $(LIB) $(DEBUG) $(DYNLIB)
+	mv $@ $(PTHOME)/public/lib/
 
 ../utils/Debug.o:
 	make all -C ../utils/
