--- a/internal/utils/Makefile
+++ b/internal/utils/Makefile
@@ -2,8 +2,8 @@ all: testDebug
 include ../../make.def
 
 testDebug:
-	$(CXX) $(OPTIM) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
-	$(CXX) $(OPTIM) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
+	$(CXX) $(CXXPTFLAGS) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
+	$(CXX) $(CXXPTFLAGS) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
 
 clean:
 	rm -f *.o testDebug
