[TEST] Adding 5 exp call sites test plus automating tests.

--- a/tests/trivial/Makefile
+++ b/tests/trivial/Makefile
@@ -1,4 +1,4 @@
-all: testExp testMathFunctions testConstructor testHeader
+all: testExp test5Exp testMathFunctions testConstructor testHeader
 
 include ../../make.def
 
@@ -9,6 +9,10 @@ testMathFunctions:
 testExp:
 	$(CXX) -c testExp.cpp -g $(DEBUG) $(PTINCDIR)
 	$(CXX) -o $@ testExp.o -g $(PTLIB) $(DEBUG)
+
+test5Exp:
+	$(CXX) -c test5Exp.cpp -g $(DEBUG) $(PTINCDIR)
+	$(CXX) -o $@ test5Exp.o -g $(PTLIB) $(DEBUG)
 
 testHeader:
 	$(CXX) -c testHeader.cpp -g $(DEBUG) $(PTINCDIR)
@@ -22,6 +26,6 @@ clean:
 	rm -f *.o
 
 cleanall: clean
-	rm -f testConstructor testHeader testMathFunctions testExp
+	rm -f testConstructor testHeader testMathFunctions testExp test5Exp
 
 .PHONY: unittest
