[COMPILE] add public/lib mkdir.

--- a/internal/src/Makefile
+++ b/internal/src/Makefile
@@ -6,6 +6,7 @@ libprecisiontuning.so: ../utils/Debug.o
 	make -C ../utils/
 	$(CXX) $(CXXPTFLAGS) -c PrecisionTuner.cpp Profile.cpp DynFuncCall.cpp overloading.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
 	$(CXX) $(CXXPTFLAGS) -o $@ ../utils/Debug.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o -g $(LIB) $(DEBUG) $(DYNLIB)
+	mkdir -p $(PTHOME)/public/lib/
 	mv $@ $(PTHOME)/public/lib/
 
 ../utils/Debug.o:
