--- a/external-deps/Makefile
+++ b/external-deps/Makefile
@@ -1,6 +1,9 @@
-all: jsoncpp
+all: jsoncpp GOTCHA
+
+GOTCHA:
+	sh compile_GOTCHA.sh
 
 jsoncpp:
 	sh compile_jsoncpp.sh
 
-.PHONY: jsoncpp
+.PHONY: jsoncpp GOTCHA
