--- a/internal/utils/Makefile
+++ b/internal/utils/Makefile
@@ -3,7 +3,7 @@ include ../../make.def
 
 testDebug:
 	$(CXX) $(CXXPTFLAGS) -c Debug.cpp testDebug.cpp -g $(DEBUG) -I. $(INCDIR) $(GCCDYNLIB)
-	$(CXX) $(CXXPTFLAGS) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR) $(DYNLIB)
+	$(CXX) $(CXXPTFLAGS) -o $@ Debug.o testDebug.o -g $(DEBUG) -I. $(INCDIR)
 
 clean:
 	rm -f *.o testDebug
