--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external-deps/GOTCHA"]
 	path = external-deps/GOTCHA
 	url = https://github.com/LLNL/GOTCHA.git
+[submodule "external-deps/cereal"]
+	path = external-deps/cereal
+	url = https://github.com/USCiLab/cereal.git
