--- a/internal/src/Makefile
+++ b/internal/src/Makefile
@@ -1,10 +1,12 @@
-SOURCES=PrecisionTuner.cpp overloading.cpp Profile.cpp DynFuncCall.cpp Labels.cpp Utils.cpp ShadowValue.cpp
-OBJECTS=Backtrace.o Profile.o PrecisionTuner.o DynFuncCall.o overloading.o Labels.o Utils.o ShadowValue.o ../utils/Debug.o
+include ../../make.def
+SOURCES=PrecisionTuner.cpp overloading_dgemm.cpp Profile.cpp DynFuncCall.cpp Labels.cpp Utils.cpp ShadowValue.cpp
+OBJECTS=Backtrace.o Profile.o PrecisionTuner.o DynFuncCall.o overloading_dgemm.o Labels.o Utils.o ShadowValue.o ../utils/Debug.o
 GOTCHAWARNING=-fpermissive
+CXX=icpc
 
 libprecisiontuning.so: $(OBJECTS)
 	make -C ../utils/
-	$(CXX) $(CXXPTFLAGS) -o $@ $^ -g $(LIB) $(DEBUG) $(DYNLIB)
+	$(CXX) $(CXXPTFLAGS) -o $@ $^ -g $(LIB) $(DEBUG) $(DYNLIB)  -L/usr/lib64/ -lopenblas
 	mkdir -p $(PTHOME)/public/lib/
 	mv $@ $(PTHOME)/public/lib/
 
