[TESTS] update to new pyflotlib.
Add USE_PTUNER macro.
remove obsolete xgemm function declaration.
Add explicit call to ptuner_dgemm in USE_PTUNER code version.
Update config file to new environment variables.

--- a/tests/gemm/Makefile
+++ b/tests/gemm/Makefile
@@ -7,8 +7,8 @@ gemm:
 	$(CXX) -o $@  testDGEMM.o -g  $(DEBUG) -lopenblas
 
 gemm-pyflot:
-	$(CXX) -O0 -c testDGEMM.cpp -g $(DEBUG) $(PTINCDIR) -rdynamic
-	$(CXX) -o $@  testDGEMM.o -g $(PTLIB) $(DEBUG)  -rdynamic -lopenblas
+	$(CXX) -O0 -c testDGEMM.cpp -g $(DEBUG) $(PTINCDIR) -rdynamic -DUSE_PTUNER
+	$(CXX) -O0 -o $@  testDGEMM.o -g $(PTLIB) $(DEBUG)  -rdynamic -lopenblas
 
 clean:
 	rm -f *.o
