--- a/tests/gemm/default-pyflot-profiling.config
+++ b/tests/gemm/default-pyflot-profiling.config
@@ -1,6 +1,6 @@
 [Defaults]
 binary:${PWD}/gemm-pyflot
 params:
-ptunerdir:${PWD}/.pyflot-10ite-1d
+dumpdir:${PWD}/.gemm-pyflot
 profilefile:profile.json
 onlyProfile:True
