[TESTS] complete gemm test.

--- a/tests/gemm/default-pyflot-analyzing.config
+++ b/tests/gemm/default-pyflot-analyzing.config
@@ -1,6 +1,8 @@
 [Defaults]
 binary:${PWD}/test_gemm_pyflot
 params:
+strategy:SLOC
+readdir:${PWD}/.pyflot-gemm
 dumpdir:${PWD}/.pyflot-gemm
 profilefile:profile.json
-onlyProfile:True
+verif_text:SUCCESS
