[TESTS] test gemm rectangular matrices.

--- a/tests/gemm/CMakeLists.txt
+++ b/tests/gemm/CMakeLists.txt
@@ -3,3 +3,9 @@ target_link_libraries(test_gemm openblas)
 add_executable(test_gemm_pyflot testDGEMM.cpp)
 target_compile_definitions(test_gemm_pyflot PRIVATE -DUSE_PTUNER)
 target_link_libraries(test_gemm_pyflot pyflot)
+
+add_executable(test_gemm-rectangular testDGEMM-rectangular.cpp)
+target_link_libraries(test_gemm-rectangular openblas)
+add_executable(test_gemm-rectangular_pyflot testDGEMM-rectangular.cpp)
+target_compile_definitions(test_gemm-rectangular_pyflot PRIVATE -DUSE_PTUNER)
+target_link_libraries(test_gemm-rectangular_pyflot pyflot)
