--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ add_library (pyflot SHARED internal/src/Backtrace.cpp
     internal/src/Utils.cpp
     internal/src/overloading.cpp)
 target_include_directories (pyflot PUBLIC public/include/ internal/include/ ${GOTCHA_INC_PATH} ${JSON_INC_PATH})
-target_link_libraries (pyflot jsoncpp_lib gotcha openblas)
+target_link_libraries (pyflot jsoncpp_lib gotcha)
 
 ###############################################################################
 ## Testing PyFloT
